fix heading line not visible

--- a/src/UI/Heading/Heading.module.css
+++ b/src/UI/Heading/Heading.module.css
@@ -10,11 +10,12 @@
     line-height: 48px;
     letter-spacing: 0em;
     text-align: center;
+    white-space: nowrap;
 
 }
 
 .line {
     border: 1px solid #FFC7D1;
-    max-width: 380px;
+    width: 380px;
     height: 0px;
 }
